@@ -11,4 +11,5 @@
  - Added a default response for commands echo and sql (Jabber).
  - Added better logging for the skip command (Jabber).
  - Removed old hotline code (CLI).
+ - Removed the icelogger command (CLI).
  - Changed tags order in tags/show: subtags go last.
